# KingOps

./: 2025 Budget as of 2026-02-26 09-33 - Plan.csv  2025 Budget as of 2026-02-26 09-33 - Register.csv  README.md  app.py  config.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
Vault/: .gitignore  policies.csv.example
data/: household.json
src/: __init__.py
src/compute/: __init__.py  balance_sheet.py  behavioral.py  cash_flow.py  risk.py
src/data/: __init__.py  household_store.py
src/ingest/: __init__.py  ynab.py
src/schema/: __init__.py  models.py
src/ui/: __init__.py  layout.py  styles.py  theme.py
src/ui/components/: __init__.py  alert_card.py  allocation_flow_bar.py  disclosure_drawer.py  integrity_panel.py  object_card.py
src/ui/pages/: __init__.py  allocation.py  behavioral.py  household.py  net_worth.py  people.py  projects.py  risk.py
